--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,8 @@ body {
     overflow: hidden;
     color: var(--accent-color);
     text-align: center;
+    display: flex;
+    float: right;
 }
 
 .menu-item {
@@ -178,21 +180,36 @@ form {
 }
 
 .btn-send-message {
-    margin-top: 10px;
-    padding: 10px;
-    font-size: 20px;
-    background-color: var(--accent-color);
+    color: black;
+    background-color: #ffffff;
+    font-size: 1.7rem;
     border-radius: 4px;
-    border-style: none;
+    padding: 6px 8px;
+    border: none;
     cursor: pointer;
-    transition: all 250ms;
-    color: var(--primary-color-dark);
+    position: relative;
+    overflow: hidden;
+    z-index: 1;
 }
 
-.btn-send-message:hover,
 .btn-send-message:focus {
-    background-color: var(--primary-color-dark);
-    color: var(--accent-color);
+    box-shadow: none;
+}
+
+.btn-send-message::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 0%;
+    background-color: rgba(0, 0, 0, 0.1);
+    height: 100%;
+    z-index: -1;
+    transition: all 0.3s ease;
+}
+
+.btn-send-message:hover::before {
+    width: 100%;
 }
 
 footer {
@@ -208,12 +225,18 @@ footer {
 .footer-section-container {
     display: flex;
     justify-content: center;
+    font-size: 18px;
 }
 
 .footer-link {
     text-decoration: none;
     color: var(--accent-color);
     font-size: 18px;
+}
+
+a:visited {
+    color: #ffffff;
+    text-decoration: underline;
 }
 
 .youtube-container {
@@ -238,4 +261,50 @@ footer {
 .bi-heartbreak {
     color: red;
     display: inline-block;
+}
+
+
+/* Tecnologías */
+
+.tech-icons-container {
+    background-color: rgba(255, 255, 255, 0.801);
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    padding-top: 40px;
+}
+
+.tech-icon-list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 0px 60px;
+}
+
+.tech-icon-list-end {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+}
+
+.tech-icon-item {
+    display: flex;
+    flex-direction: column;
+    margin-right: 80px;
+    margin-bottom: 80px;
+    align-items: center;
+}
+
+.tech-icon-item-end {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 80px;
+    align-items: center;
+}
+
+span {
+    margin-top: 5px;
+    color: var(--primary-color-dark);
 }
